<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

   <androidx.core.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               android:id="@+id/tv_host_hint"
               style="@style/TextStyleEditHint"
               android:layout_marginTop="10dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               android:layout_width="0dp"
               android:text="@string/ip_address"
               android:layout_height="wrap_content"/>

           <EditText
               android:id="@+id/et_ip_input"
               app:layout_constraintTop_toBottomOf="@id/tv_host_hint"
               android:layout_width="match_parent"
               android:imeOptions="actionNext"
               style="@style/EditStyleLogin"
               android:hint="@string/please_input_host"
               android:layout_height="wrap_content"/>

           <TextView
               android:id="@+id/tv_port_hint"
               style="@style/TextStyleEditHint"
               android:layout_marginTop="10dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:layout_width="0dp"
               android:text="@string/port"
               app:layout_constraintTop_toBottomOf="@id/et_ip_input"
               android:layout_height="wrap_content"/>

           <EditText
               android:id="@+id/et_port_input"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               style="@style/EditStyleLogin"
               android:imeOptions="actionNext"
               android:hint="@string/please_input_port"
               app:layout_constraintTop_toBottomOf="@id/tv_port_hint"
               android:layout_width="0dp"
               android:layout_height="wrap_content"/>

           <TextView
               android:id="@+id/tv_user_name_hint"
               style="@style/TextStyleEditHint"
               android:layout_marginTop="10dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:layout_width="0dp"
               android:text="@string/user_name"
               app:layout_constraintTop_toBottomOf="@id/et_port_input"
               android:layout_height="wrap_content"/>

           <EditText
               android:id="@+id/et_user_name_input"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:imeOptions="actionNext"
               style="@style/EditStyleLogin"
               android:hint="@string/please_input_user_name"
               app:layout_constraintTop_toBottomOf="@id/tv_user_name_hint"
               android:layout_width="0dp"
               android:layout_height="wrap_content"/>

           <TextView
               android:id="@+id/tv_password_hint"
               style="@style/TextStyleEditHint"
               android:layout_marginTop="10dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:layout_width="0dp"
               android:text="@string/password"
               app:layout_constraintTop_toBottomOf="@id/et_user_name_input"
               android:layout_height="wrap_content"/>

           <EditText
               android:id="@+id/et_password_input"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               style="@style/EditStyleLogin"
               android:imeOptions="actionDone"
               android:hint="@string/please_input_password"
               app:layout_constraintTop_toBottomOf="@id/tv_password_hint"
               android:layout_width="0dp"
               android:layout_height="wrap_content"/>

           <Button
               android:id="@+id/bt_login"
               android:layout_width="match_parent"
               android:layout_marginStart="16dp"
               android:layout_marginEnd="16dp"
               android:text="@string/login"
               android:layout_marginTop="32dp"
               app:layout_constraintTop_toBottomOf="@id/et_password_input"
               android:layout_height="wrap_content"/>
       </androidx.constraintlayout.widget.ConstraintLayout>
   </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>